# chatbots-play

./: LICENSE  README.md  pyproject.toml
chatbots/: chatbot1.py  create_db.py  ragas.py  test.py  test_rag.py
create-db/: create_db.py  get_manual.py
download-model/: download_llm  download_llm.py
local_bot/: 01_get_manual.py  02_download model  03_create_db.py  04_test_rag.py  config.py
local_bot/chromadb/: README.md
local_bot/dapla-manual/: README.md
